--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-.eslintcache
-build
-node_modules
-brave
-testem.log
-mocha.log
+/.eslintcache
+/build
+/node_modules
+/brave
+/testem.log
+/mocha.log
