--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/preset-env": "7.15.6",
     "@babel/preset-typescript": "7.15.0",
     "@types/chrome": "0.0.157",
+    "@types/mocha": "^9.0.0",
     "@types/node": "16.4.13",
     "@types/punycode": "2.1.0",
     "@typescript-eslint/eslint-plugin": "4.31.2",
@@ -113,10 +114,10 @@
     "ws": "8.2.2"
   },
   "dependencies": {
-    "dexie": "3.0.3",
     "@cliqz/url-parser": "1.1.4",
     "abortcontroller-polyfill": "1.7.3",
     "anonymous-credentials": "https://github.com/human-web/anonymous-credentials/releases/download/1.0.0/anonymous-credentials-1.0.0.tgz",
+    "dexie": "3.0.3",
     "pako": "2.0.4",
     "punycode": "2.1.1",
     "star-wasm": "https://github.com/brave/web-discovery-project/releases/download/star-wasm-0.1.3.tgz/star-wasm-0.1.3.tgz",
