Force resolve of immer and set-value to solve security advisories. npx npm-force-resolutions was used to apply package.json resolutions field to package-lock.json. npm ci should be used to replicate package-lock.json. npm install will just overwrite with insecure versions of transient dependencies

--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "not Safari >= 0"
   ],
   "homepage": "https://github.com/brave/web-discovery-project#readme",
+  "resolutions": {
+    "set-value": "4.0.1"
+  },
   "devDependencies": {
     "@babel/core": "7.15.8",
     "@babel/plugin-proposal-class-properties": "7.14.5",
