--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,18 +23,19 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Get yarn cache directory path
-      id: yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - name: Get npm cache directory path
+      id: npm-cache-dir-path
+      run: echo "::set-output name=dir::$(npm config get cache)"
 
-    - uses: actions/cache@v2
-      id: yarn-cache
+    - name: Cache node modules
+      uses: actions/cache@v2
+      id: npm-cache
       with:
-        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        path: ${{ steps.npm-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
-          ${{ runner.os }}-yarn-
+          ${{ runner.os }}-npm-
 
-    - run: yarn install --frozen-lock
+    - run: npm ci
 
     - run: node --unhandled-rejections=strict fern.js build ${{ matrix.config }}
