--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,34 +18,24 @@ jobs:
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           git fetch --prune --unshallow
 
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+    - uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
 
       - name: Bootstrap
-        run: yarn install --frozen-lock
+        run: npm ci
 
       - name: Build
-        run: yarn build-module
+        run: npm run build-module
 
-      - name: Security Audit (yarn)
-        run: yarn audit
-
-      - name: Security Audit (npm)
-        run: |
-          npm install
-          npm audit
-          rm package-lock.json
+      - name: Security Audit
+        run: npm audit
 
       - name: Create release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          yarn release
+          npm run release
