--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "main": "./build/index.js",
   "files": [
     "build",
-    "package.json",
-    "package-lock.json"
+    "package.json"
   ],
   "publishConfig": {
     "access": "public"
