Fix critical npm audit issues (#71)
* convert yarn.lock to package-lock.json via synp tool

* Automatic audit fixes via npm audit fix

* Force resolve of immer and set-value to solve security advisories.
npx npm-force-resolutions is used to apply package.json resolutions field to package-lock.json

* Use npm instead of yarn to have consistency with package resolutions

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "lint": "node fern.js lint",
     "build": "node fern.js build configs/sandbox.js --environment prod",
     "build-module": "node fern.js build configs/module.js --environment prod",
+    "preinstall": "npx npm-force-resolutions@0.0.10",
     "start-brave-env": "web-ext run --source-dir='./build' --target chromium --chromium-binary \"$BRAVE_BIN\"",
     "start:brave": "web-ext run --source-dir='./build' --target chromium --chromium-binary ./brave/brave",
     "start:build": "node --unhandled-rejections=strict fern.js serve configs/sandbox.js --no-launch",
-    "start": "yarn build && concurrently yarn:start:*",
+    "start": "npm run build && concurrently npm:start:*",
     "release": "auto shipit"
   },
   "repository": {
@@ -24,8 +25,7 @@
   "main": "./build/index.js",
   "files": [
     "build",
-    "package.json",
-    "yarn.lock"
+    "package.json"
   ],
   "publishConfig": {
     "access": "public"
@@ -44,6 +44,9 @@
     "not Safari >= 0"
   ],
   "homepage": "https://github.com/brave/web-discovery-project#readme",
+  "resolutions": {
+    "set-value": "4.0.1"
+  },
   "devDependencies": {
     "@babel/core": "7.15.8",
     "@babel/plugin-proposal-class-properties": "7.14.5",
