--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,18 +23,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Get yarn cache directory path
-      id: yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-
     - uses: actions/cache@v2
-      id: yarn-cache
       with:
-        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
-          ${{ runner.os }}-yarn-
+          ${{ runner.os }}-node-
 
-    - run: yarn install --frozen-lock
+    - run: npm ci
 
     - run: node --unhandled-rejections=strict fern.js build ${{ matrix.config }}
