--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -29,6 +29,8 @@ jobs:
 
     - run: npm ci
 
+    - run: npm audit
+
     - run: node --unhandled-rejections=strict fern.js build configs/ci/unit-tests.js --include-tests
 
     - run: node --unhandled-rejections=strict fern.js test configs/ci/unit-tests.js -l unit-node --environment testing --no-build --ci report.xml
