--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   ],
   "homepage": "https://github.com/brave/web-discovery-project#readme",
   "resolutions": {
+    "ansi-regex": "5.0.1",
+    "ansi-html": "mahdyar/ansi-html-community#v0.0.8",
     "set-value": "4.0.1",
     "json-schema": "0.4.0"
   },
