--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
           ${{ runner.os }}-node-
 
       - name: Bootstrap
-        run: npm ci
+        run: npm install
 
       - name: Build
         run: npm run build-module
