--- a/package.json
+++ b/package.json
@@ -100,8 +100,8 @@
     "git-describe": "4.1.0",
     "git-rev": "0.2.1",
     "glob": "7.2.0",
+    "jsdom": "^18.1.1",
     "mocha": "9.1.3",
-    "mock-browser": "0.92.14",
     "mockdate": "3.0.5",
     "node-notifier": "10.0.0",
     "path-browserify": "1.0.1",
