--- a/package.json
+++ b/package.json
@@ -51,22 +51,23 @@
     "json-schema": "0.4.0"
   },
   "devDependencies": {
-    "@babel/core": "7.15.8",
-    "@babel/plugin-proposal-class-properties": "7.14.5",
-    "@babel/plugin-transform-modules-commonjs": "7.15.4",
-    "@babel/plugin-transform-modules-systemjs": "7.15.4",
-    "@babel/plugin-transform-regenerator": "7.14.5",
-    "@babel/plugin-transform-template-literals": "7.14.5",
-    "@babel/preset-env": "7.15.8",
-    "@babel/preset-typescript": "7.15.0",
-    "@types/chrome": "0.0.162",
+    "@babel/core": "7.16.0",
+    "@babel/plugin-proposal-class-properties": "7.16.0",
+    "@babel/plugin-proposal-dynamic-import": "^7.16.0",
+    "@babel/plugin-transform-modules-commonjs": "7.16.0",
+    "@babel/plugin-transform-modules-systemjs": "7.16.0",
+    "@babel/plugin-transform-regenerator": "7.16.0",
+    "@babel/plugin-transform-template-literals": "7.16.0",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-typescript": "7.16.0",
+    "@types/chrome": "0.0.166",
     "@types/mocha": "9.0.0",
-    "@types/node": "16.11.6",
+    "@types/node": "16.11.11",
     "@types/punycode": "2.1.0",
-    "@typescript-eslint/eslint-plugin": "5.2.0",
-    "@typescript-eslint/parser": "5.2.0",
+    "@typescript-eslint/eslint-plugin": "5.5.0",
+    "@typescript-eslint/parser": "5.5.0",
     "@xmldom/xmldom": "0.7.5",
-    "auto": "10.32.2",
+    "auto": "10.32.3",
     "babel-eslint": "10.1.0",
     "body-parser": "1.19.0",
     "broccoli": "3.5.2",
@@ -79,19 +80,19 @@
     "broccoli-merge-trees": "4.2.0",
     "broccoli-plugin": "4.0.7",
     "broccoli-source": "3.0.1",
-    "camelcase": "6.2.0",
+    "camelcase": "6.2.1",
     "chai": "4.3.4",
     "chai-as-promised": "7.1.1",
     "chai-dom": "1.10.0",
     "colors": "1.4.0",
     "commander": "8.3.0",
-    "concurrently": "6.3.0",
+    "concurrently": "6.4.0",
     "console-ui": "3.1.2",
-    "cookie-parser": "1.4.5",
+    "cookie-parser": "1.4.6",
     "eslint": "7.32.0",
+    "eslint_d": "11.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-compat": "3.13.0",
-    "eslint_d": "11.0.0",
     "express": "4.17.1",
     "fake-indexeddb": "3.1.7",
     "filehound": "1.17.5",
@@ -99,35 +100,35 @@
     "git-describe": "4.1.0",
     "git-rev": "0.2.1",
     "glob": "7.2.0",
+    "jsdom": "^18.1.1",
     "mocha": "9.1.3",
-    "mock-browser": "0.92.14",
     "mockdate": "3.0.5",
     "node-notifier": "10.0.0",
     "path-browserify": "1.0.1",
     "ramda": "0.27.1",
-    "sinon": "11.1.2",
+    "sinon": "12.0.1",
     "sinon-chai": "3.7.0",
     "strip-json-comments": "3.1.1",
     "systemjs": "0.19.47",
     "systemjs-plugin-json": "0.3.0",
     "testem": "3.6.0",
     "tree-sync": "2.1.0",
-    "typescript": "4.4.4",
+    "typescript": "4.5.2",
     "untildify": "4.0.0",
     "watch-detector": "1.0.1",
     "web-ext": "6.6.0",
-    "webpack": "5.60.0",
-    "ws": "8.2.3"
+    "webpack": "5.64.4",
+    "ws": "8.3.0"
   },
   "dependencies": {
     "@cliqz/url-parser": "1.1.4",
     "abortcontroller-polyfill": "1.7.3",
     "anonymous-credentials": "https://github.com/human-web/anonymous-credentials/releases/download/1.0.0/anonymous-credentials-1.0.0.tgz",
-    "dexie": "3.0.3",
+    "dexie": "3.2.0",
     "pako": "2.0.4",
     "punycode": "2.1.1",
     "star-wasm": "https://github.com/brave/web-discovery-project/releases/download/star-wasm-0.1.3.tgz/star-wasm-0.1.3.tgz",
-    "tldts-experimental": "5.7.50",
+    "tldts-experimental": "5.7.53",
     "webextension-polyfill": "0.8.0"
   },
   "auto": {
