--- a/package.json
+++ b/package.json
@@ -46,11 +46,7 @@
   "homepage": "https://github.com/brave/web-discovery-project#readme",
   "resolutions": {
     "ansi-html": "mahdyar/ansi-html-community#v0.0.8",
-    "node-forge": "1.2.1",
-    "node-fetch": "3.1.1",
-    "nanoid": "3.1.31",
-    "ansi-regex": "5.0.1",
-    "follow-redirect": "1.14.8"
+    "node-forge": "1.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
@@ -68,10 +64,10 @@
     "@types/punycode": "2.1.0",
     "@typescript-eslint/eslint-plugin": "5.9.1",
     "@typescript-eslint/parser": "5.9.1",
-    "@xmldom/xmldom": "0.8.0",
-    "auto": "10.32.5",
+    "@xmldom/xmldom": "0.8.1",
+    "auto": "10.36.5",
     "babel-eslint": "10.1.0",
-    "body-parser": "1.19.1",
+    "body-parser": "1.19.2",
     "broccoli": "3.5.2",
     "broccoli-babel-transpiler": "7.8.0",
     "broccoli-concat": "4.2.5",
@@ -83,19 +79,19 @@
     "broccoli-plugin": "4.0.7",
     "broccoli-source": "3.0.1",
     "camelcase": "6.3.0",
-    "chai": "4.3.4",
+    "chai": "4.3.6",
     "chai-as-promised": "7.1.1",
     "chai-dom": "1.11.0",
     "colors": "1.4.0",
-    "commander": "8.3.0",
+    "commander": "9.0.0",
     "concurrently": "7.0.0",
     "console-ui": "3.1.2",
     "cookie-parser": "1.4.6",
     "eslint": "7.32.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-compat": "4.0.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-compat": "4.0.2",
     "eslint_d": "11.1.1",
-    "express": "4.17.2",
+    "express": "4.17.3",
     "fake-indexeddb": "3.1.7",
     "filehound": "1.17.5",
     "full-icu": "1.4.0",
@@ -103,11 +99,11 @@
     "git-rev": "0.2.1",
     "glob": "7.2.0",
     "jsdom": "19.0.0",
-    "mocha": "9.1.3",
+    "mocha": "9.2.2",
     "mockdate": "3.0.5",
-    "node-notifier": "10.0.0",
+    "node-notifier": "10.0.1",
     "path-browserify": "1.0.1",
-    "ramda": "0.27.2",
+    "ramda": "0.28.0",
     "sinon": "12.0.1",
     "sinon-chai": "3.7.0",
     "strip-json-comments": "3.1.1",
@@ -115,28 +111,28 @@
     "systemjs-plugin-json": "0.3.0",
     "testem": "3.6.0",
     "tree-sync": "2.1.0",
-    "typescript": "4.5.4",
+    "typescript": "4.6.2",
     "untildify": "4.0.0",
     "watch-detector": "1.0.1",
-    "web-ext": "6.6.0",
-    "webpack": "5.64.4",
-    "ws": "8.4.0"
+    "web-ext": "6.7.0",
+    "webpack": "5.70.0",
+    "ws": "8.4.1"
   },
   "dependencies": {
     "@cliqz/url-parser": "1.1.4",
     "abortcontroller-polyfill": "1.7.3",
     "anonymous-credentials": "https://github.com/human-web/anonymous-credentials/releases/download/1.0.0/anonymous-credentials-1.0.0.tgz",
-    "dexie": "3.2.0",
+    "dexie": "3.2.1",
     "pako": "2.0.4",
     "punycode": "2.1.1",
     "star-wasm": "https://github.com/brave/web-discovery-project/releases/download/star-wasm-0.1.3.tgz/star-wasm-0.1.3.tgz",
-    "tldts-experimental": "5.7.54",
+    "tldts-experimental": "5.7.72",
     "webextension-polyfill": "0.8.0"
   },
   "auto": {
     "name": "Brave",
     "email": "remi@brave.com",
-    "plugins": [],
+    "plugins": ["git-tag"],
     "labels": [
       {
         "name": "PR: Breaking Change :boom:",
