--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "lint": "node fern.js lint",
     "build": "node fern.js build configs/sandbox.js --environment prod",
     "build-module": "node fern.js build configs/module.js --environment prod",
-    "preinstall": "npx npm-force-resolutions@0.0.10",
     "start-brave-env": "web-ext run --source-dir='./build' --target chromium --chromium-binary \"$BRAVE_BIN\"",
     "start:brave": "web-ext run --source-dir='./build' --target chromium --chromium-binary ./brave/brave",
     "start:build": "node --unhandled-rejections=strict fern.js serve configs/sandbox.js --no-launch",
@@ -44,9 +43,10 @@
     "not Safari >= 0"
   ],
   "homepage": "https://github.com/brave/web-discovery-project#readme",
-  "resolutions": {
+  "overrides": {
     "ansi-html": "mahdyar/ansi-html-community#v0.0.8",
-    "node-forge": "1.3.0"
+    "node-forge": "1.3.0",
+    "moment": "2.29.2"
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
