--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
   "resolutions": {
     "ansi-html": "mahdyar/ansi-html-community#v0.0.8",
     "node-forge": "1.3.1",
-    "moment": "2.29.2"
+    "moment": "2.29.2",
+    "async": "2.6.4"
   },
   "devDependencies": {
     "@babel/core": "7.17.9",
