--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "lint": "node fern.js lint",
     "build": "node fern.js build configs/sandbox.js --environment prod",
     "build-module": "node fern.js build configs/module.js --environment prod",
-    "preinstall": "npx npm-force-resolutions@0.0.10",
     "start-brave-env": "web-ext run --source-dir='./build' --target chromium --chromium-binary \"$BRAVE_BIN\"",
     "start:brave": "web-ext run --source-dir='./build' --target chromium --chromium-binary ./brave/brave",
     "start:build": "node --unhandled-rejections=strict fern.js serve configs/sandbox.js --no-launch",
@@ -44,7 +43,7 @@
     "not Safari >= 0"
   ],
   "homepage": "https://github.com/brave/web-discovery-project#readme",
-  "resolutions": {
+  "overrides": {
     "ansi-html": "mahdyar/ansi-html-community#v0.0.8",
     "node-forge": "1.3.1",
     "moment": "2.29.2",
@@ -90,9 +89,9 @@
     "console-ui": "3.1.2",
     "cookie-parser": "1.4.6",
     "eslint": "7.32.0",
+    "eslint_d": "12.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-compat": "4.0.2",
-    "eslint_d": "12.0.0",
     "express": "4.17.3",
     "fake-indexeddb": "3.1.7",
     "filehound": "1.17.5",
@@ -125,6 +124,7 @@
     "abortcontroller-polyfill": "1.7.3",
     "anonymous-credentials": "https://github.com/human-web/anonymous-credentials/releases/download/1.0.0/anonymous-credentials-1.0.0.tgz",
     "dexie": "3.2.2",
+    "linkedom": "^0.14.12",
     "pako": "2.0.4",
     "punycode": "2.1.1",
     "star-wasm": "https://github.com/brave/web-discovery-project/releases/download/star-wasm-0.1.3.tgz/star-wasm-0.1.3.tgz",
@@ -134,7 +134,9 @@
   "auto": {
     "name": "Brave",
     "email": "remi@brave.com",
-    "plugins": ["git-tag"],
+    "plugins": [
+      "git-tag"
+    ],
     "labels": [
       {
         "name": "PR: Breaking Change :boom:",
