--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,9 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Bootstrap
-        run: npm install
+        run: |
+          npm install -g npm@8.3.1
+          npm install
 
       - name: Build
         run: npm run build-module
