--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -27,7 +27,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - run: npm install
+      - run: |
+          npm install -g npm@8.3.1
+          npm install
 
       - run: node --unhandled-rejections=strict fern.js build configs/ci/unit-tests.js --include-tests
 
