--- a/package.json
+++ b/package.json
@@ -126,7 +126,9 @@
     "webextension-polyfill": "0.9.0"
   },
   "overrides": {
-    "ansi-html": "0.0.9"
+    "ansi-html": "0.0.9",
+    "node-forge": "1.3.1",
+    "got": "12.1.0"
   },
   "auto": {
     "name": "Brave",
