--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "lint": "node fern.js lint",
     "build": "node fern.js build configs/sandbox.js --environment prod",
     "build-module": "node fern.js build configs/module.js --environment prod",
-    "preinstall": "npx npm-force-resolutions@0.0.10",
     "start-brave-env": "web-ext run --source-dir='./build' --target chromium --chromium-binary \"$BRAVE_BIN\"",
     "start:brave": "web-ext run --source-dir='./build' --target chromium --chromium-binary ./brave/brave",
     "start:build": "node --unhandled-rejections=strict fern.js serve configs/sandbox.js --no-launch",
@@ -44,13 +43,6 @@
     "not Safari >= 0"
   ],
   "homepage": "https://github.com/brave/web-discovery-project#readme",
-  "resolutions": {
-    "ansi-html": "mahdyar/ansi-html-community#v0.0.8",
-    "node-forge": "1.3.1",
-    "moment": "2.29.4",
-    "async": "2.6.4",
-    "got": "12.1.0"
-  },
   "devDependencies": {
     "@babel/core": "7.17.9",
     "@babel/plugin-proposal-class-properties": "7.16.7",
@@ -132,6 +124,11 @@
     "star-wasm": "https://github.com/brave/web-discovery-project/releases/download/star-wasm-0.1.3.tgz/star-wasm-0.1.3.tgz",
     "tldts-experimental": "5.7.75",
     "webextension-polyfill": "0.9.0"
+  },
+  "overrides": {
+    "ansi-html": "0.0.9",
+    "node-forge": "1.3.1",
+    "got": "12.1.0"
   },
   "auto": {
     "name": "Brave",
