Fix integration tests in CI

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - run: ./run_tests_in_docker.sh "configs/ci/integration-tests.js -l firefox-web-ext --firefox ~/firefoxBeta/firefox/firefox"
+      - run: ./run_tests_in_docker.sh "configs/ci/integration-tests.js -l brave-web-ext --brave /opt/brave.com/brave/brave-browser"
