--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "node fern.js lint",
     "build": "node fern.js build configs/sandbox.js --environment prod",
     "build-module": "node fern.js build configs/module.js --environment prod",
-    "start-brave-env": "web-ext run --source-dir='./build' --target chromium --chromium-binary \"$BRAVE_BIN\"",
+    "start-brave-env": "web-ext run --source-dir='./build' --target chromium --chromium-binary \"$BRAVE_PATH\"",
     "start:brave": "web-ext run --source-dir='./build' --target chromium --chromium-binary ./brave/brave",
     "start:build": "node --unhandled-rejections=strict fern.js serve configs/sandbox.js --no-launch",
     "start": "npm run build && concurrently npm:start:*",
@@ -129,7 +129,8 @@
     "ansi-html": "0.0.9",
     "node-forge": "1.3.1",
     "got": "12.1.0",
-    "glob-parent": "6.0.2"
+    "glob-parent": "6.0.2",
+    "file-type": "16.5.4"
   },
   "auto": {
     "name": "Brave",
