Run npm audit fix --force
Needed for https://github.com/brave/brave-browser/issues/27185

--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "typescript": "4.7.4",
     "untildify": "4.0.0",
     "watch-detector": "1.0.1",
-    "web-ext": "6.8.0",
+    "web-ext": "^7.4.0",
     "webpack": "5.74.0",
     "ws": "8.8.1"
   },
