--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
     "node-forge": "1.3.1",
     "got": "12.2.0",
     "glob-parent": "6.0.2",
-    "file-type": "17.1.4"
+    "file-type": "17.1.4",
+    "jsonwebtoken": "9.0.0"
   },
   "auto": {
     "name": "Brave",
