--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "got": "12.2.0",
     "glob-parent": "6.0.2",
     "file-type": "17.1.4",
+    "fast-json-patch" : "3.1.1",
     "jsonwebtoken": "9.0.0"
   },
   "auto": {
