--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "typescript": "4.7.4",
     "untildify": "4.0.0",
     "watch-detector": "1.0.1",
-    "web-ext": "7.4.0",
+    "web-ext": "7.5.0",
     "webpack": "5.74.0",
     "ws": "8.8.1"
   },
@@ -128,11 +128,12 @@
   "overrides": {
     "ansi-html": "0.0.9",
     "node-forge": "1.3.1",
-    "got": "12.2.0",
+    "got": "12.4.1",
     "glob-parent": "6.0.2",
     "file-type": "17.1.4",
-    "fast-json-patch" : "3.1.1",
-    "jsonwebtoken": "9.0.0"
+    "fast-json-patch": "3.1.1",
+    "jsonwebtoken": "9.0.0",
+    "cacheable-request": "10.2.7"
   },
   "auto": {
     "name": "Brave",
