--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/plugin-proposal-dynamic-import": "7.18.6",
     "@babel/plugin-transform-modules-commonjs": "7.23.0",
     "@babel/plugin-transform-modules-systemjs": "7.23.0",
+    "@babel/plugin-transform-optional-chaining": "^7.23.0",
     "@babel/plugin-transform-regenerator": "7.22.10",
     "@babel/plugin-transform-template-literals": "7.22.5",
     "@babel/preset-env": "7.23.2",
