--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "6.11.0",
     "@xmldom/xmldom": "0.8.10",
-    "body-parser": "1.20.2",
+    "body-parser": "1.20.3",
     "broccoli": "3.5.2",
     "broccoli-babel-transpiler": "8.0.0",
     "broccoli-concat": "4.2.5",
@@ -83,7 +83,7 @@
     "eslint_d": "13.1.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-compat": "4.2.0",
-    "express": "4.19.2",
+    "express": "4.20.0",
     "fake-indexeddb": "5.0.1",
     "filehound": "1.17.6",
     "full-icu": "1.5.0",
@@ -123,7 +123,9 @@
   },
   "overrides": {
     "ansi-html": "0.0.9",
-    "express": "4.19.2",
+    "body-parser": "1.20.3",
+    "express": "4.20.0",
+    "send": "0.19.0",
     "tough-cookie": "4.1.3"
   }
 }
