workflows: no audit on bots

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -35,4 +35,5 @@ jobs:
 
       - run: node --unhandled-rejections=strict fern.js test configs/ci/unit-tests.js -l unit-node --environment testing --no-build --ci report.xml
 
-      - run: npm audit
+      - if: ${{ github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]' }}
+        run: npm audit
