--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -28,6 +28,7 @@ USER node
 
 COPY --chown=node:node package.json /app/
 COPY --chown=node:node package-lock.json /app/
+COPY --chown=node:node patches/ /app/patches/
 
 WORKDIR /app/
 
