--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lint": "node fern.js lint",
     "build": "node fern.js build configs/sandbox.js --environment prod",
     "build-module": "node fern.js build configs/module.js --environment prod",
+    "postinstall": "patch-package",
     "start:brave": "web-ext run --source-dir='./build' --target chromium --chromium-binary \"$BRAVE_PATH\"",
     "start:build": "node --unhandled-rejections=strict fern.js serve configs/sandbox.js --no-launch",
     "start": "npm run build && concurrently npm:start:*"
@@ -94,6 +95,7 @@
     "mocha": "10.2.0",
     "mockdate": "3.0.5",
     "node-notifier": "10.0.1",
+    "patch-package": "8.0.0",
     "path-browserify": "1.0.1",
     "ramda": "0.29.1",
     "sinon": "17.0.1",
