Move to the new DSL (#384)
* Init

* Fix eslint errors

* Stick with short search engine names

* Remove legacy ruleset mentions

* Fix Patterns readme section

* Fix doublefetching of query messages

* Add `addStrictQueries` tests back

* Format with `prettier`

* Add new transform functions

* Update unit tests

* Fix dev patterns endpoint

* Fix debug logging in `web-discovery-project` module

* Extract data on double-fetch only

* Build with envinronment `development` when running locally

* readme: update patterns link

* transforms: add `relaxedMaskU`

* Update pattern URLs

* transforms: add `trim`

* sanitizer: fix `isValidEAN13`

* Add DSL spec

* Simplify `UrlAnalyzer`

* Add `queryParam` and `requireURL` transform functions to the DSL spec

* Drop suspicious queries before double-fetching

* Fix `isHash` in interation tests

* Replace `isSuspiciousURL` with `sanitizeUrl`

* Replace `maskURL` and `maskURLStrict` with `sanitizeUrl`

* Pass `testMode` flag to `sanitizeUrl`

* sanitizer: fix logging

* linkedom: pin the version

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "lint": "node fern.js lint",
     "build": "node fern.js build configs/sandbox.js --environment prod",
+    "build-dev": "node fern.js build configs/sandbox.js --environment development",
     "build-module": "node fern.js build configs/module.js --environment prod",
     "postinstall": "patch-package",
     "start:brave": "web-ext run --source-dir='./build' --target chromium --chromium-binary \"$BRAVE_PATH\"",
     "start:build": "node --unhandled-rejections=strict fern.js serve configs/sandbox.js --no-launch",
-    "start": "npm run build && concurrently npm:start:*"
+    "start": "npm run build-dev && concurrently npm:start:*"
   },
   "repository": {
     "type": "git",
@@ -116,7 +117,7 @@
     "abortcontroller-polyfill": "1.7.5",
     "anonymous-credentials": "https://github.com/human-web/anonymous-credentials/releases/download/1.0.0/anonymous-credentials-1.0.0.tgz",
     "dexie": "3.2.4",
-    "linkedom": "0.14.12",
+    "linkedom": "0.16.11",
     "pako": "2.1.0",
     "punycode": "2.3.1",
     "star-wasm": "https://github.com/brave/web-discovery-project/releases/download/star-wasm-0.1.3.tgz/star-wasm-0.1.3.tgz",
