--- a/package.json
+++ b/package.json
@@ -134,6 +134,10 @@
     "send": "0.19.0",
     "tough-cookie": "4.1.3",
     "serialize-javascript": "6.0.2",
-    "tmp": "0.2.4"
+    "tmp": "0.2.4",
+    "sha.js": "2.4.12"
+  },
+  "resolutions": {
+    "sha.js": "2.4.12"
   }
 }
