--- a/package.json
+++ b/package.json
@@ -99,7 +99,6 @@
     "patch-package": "8.0.0",
     "path-browserify": "1.0.1",
     "ramda": "0.29.1",
-    "sha.js": "2.4.12",
     "sinon": "17.0.1",
     "sinon-chai": "3.7.0",
     "strip-json-comments": "3.1.1",
@@ -134,6 +133,7 @@
     "send": "0.19.0",
     "tough-cookie": "4.1.3",
     "serialize-javascript": "6.0.2",
-    "tmp": "0.2.4"
+    "tmp": "0.2.4",
+    "sha.js": "2.4.12"
   }
 }
