--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "git-rev": "0.2.1",
     "glob": "8.1.0",
     "jsdom": "22.1.0",
-    "mocha": "10.2.0",
+    "mocha": "10.8.2",
     "mockdate": "3.0.5",
     "node-notifier": "10.0.1",
     "patch-package": "8.0.0",
@@ -108,7 +108,7 @@
     "tree-sync": "2.1.0",
     "typescript": "5.2.2",
     "watch-detector": "1.0.2",
-    "web-ext": "7.11.0",
+    "web-ext": "8.9.0",
     "webpack": "5.94.0",
     "ws": "8.18.3"
   },
@@ -134,6 +134,9 @@
     "tough-cookie": "4.1.3",
     "serialize-javascript": "6.0.2",
     "tmp": "0.2.4",
-    "sha.js": "2.4.12"
+    "sha.js": "2.4.12",
+    "braces": "3.0.3",
+    "path-to-regexp": "0.1.12",
+    "micromatch": "4.0.8"
   }
 }
