--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "body-parser": "1.20.3",
     "express": "4.20.0",
     "form-data": "4.0.4",
+    "js-yaml": "4.1.1",
     "send": "0.19.0",
     "tough-cookie": "4.1.3",
     "serialize-javascript": "6.0.2",
