--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "express": "4.20.0",
     "form-data": "4.0.4",
     "js-yaml": "4.1.1",
+    "node-forge": "1.3.2",
     "send": "0.19.0",
     "tough-cookie": "4.1.3",
     "serialize-javascript": "6.0.2",
