Add a scope to the parser module and add as a dep

--- a/modules/parser/package.json
+++ b/modules/parser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wdp-parser",
+  "name": "@web-discovery-project/parser",
   "version": "0.0.1",
   "main": "index.js",
   "type": "module",
