--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-discovery-project",
   "version": "1.1.74",
-  "workspaces": ["modules/wdp-parser"],
+  "workspaces": ["modules/parser"],
   "description": "Standalone Web Discovery Project package and extension",
   "scripts": {
     "lint": "node fern.js lint",
@@ -123,7 +123,8 @@
     "punycode": "2.3.1",
     "star-wasm": "https://github.com/brave/web-discovery-project/releases/download/star-wasm-0.1.3.tgz/star-wasm-0.1.3.tgz",
     "tldts-experimental": "6.0.19",
-    "webextension-polyfill": "0.9.0"
+    "webextension-polyfill": "0.9.0",
+    "@web-discovery-project/parser": "workspace:^"
   },
   "overrides": {
     "ansi-html": "0.0.9",
