--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -2,7 +2,7 @@ FROM node:lts-bookworm
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-ENV PATH "/usr/local/ssl/bin:$PATH"
+ENV PATH="/usr/local/ssl/bin:$PATH"
 
 RUN mkdir /app
 RUN chown node:node -R /app
