--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "star-wasm": "https://github.com/brave/web-discovery-project/releases/download/star-wasm-0.1.3.tgz/star-wasm-0.1.3.tgz",
     "tldts-experimental": "6.0.19",
     "webextension-polyfill": "0.9.0",
-    "@web-discovery-project/parser": "workspace:^"
+    "@web-discovery-project/parser": "0.0.1"
   },
   "overrides": {
     "ansi-html": "0.0.9",
