Migrate `.eslintrc` -> `eslint.config.mjs`

--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@babel/plugin-transform-template-literals": "7.23.3",
     "@babel/preset-env": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
+    "@eslint/eslintrc": "3.3.3",
+    "@eslint/js": "9.39.2",
     "@types/chrome": "0.0.251",
     "@types/mocha": "10.0.4",
     "@types/node": "20.9.0",
@@ -93,6 +95,7 @@
     "git-describe": "4.1.1",
     "git-rev": "0.2.1",
     "glob": "8.1.0",
+    "globals": "17.2.0",
     "jsdom": "22.1.0",
     "mocha": "10.2.0",
     "mockdate": "3.0.5",
